# royal-rumble

./: .gitattributes  .gitignore  README.md  cards.md  compose.sh  deploy.sh  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  go.mod  go.sum  ideas.md  main.go  package.json  progress.md  renovate.json
crawler/: README.md  all_wrestlers.py  crawl.py  event_search_page.py  get_names.sh  match.json  names.txt  pyproject.toml  royal_rumble_match_page.py  url_builder.py  wrestler_page.py
crawler/all_wrestlers/: page_0.txt  page_1.txt  page_101.txt  page_102.txt  page_104.txt  page_108.txt  page_11.txt  page_112.txt  page_114.txt  page_116.txt  page_119.txt  page_121.txt  page_123.txt  page_125.txt  page_127.txt  page_13.txt  page_132.txt  page_134.txt  page_136.txt  page_137.txt  page_138.txt  page_139.txt  page_14.txt  page_140.txt  page_145.txt  page_147.txt  page_148.txt  page_149.txt  page_15.txt  page_150.txt  page_151.txt  page_153.txt  page_156.txt  page_16.txt  page_161.txt  page_163.txt  page_164.txt  page_166.txt  page_168.txt  page_169.txt  (+80 more)
crawler/data/: names.txt  saved_superstars.json
crawler/matches/: 1988.json  1989.json  1990.json  1991.json  1992.json  1993.json  1994.json  1995.json  1996.json  1997.json  1998.json  1999.json  2000.json  2001.json  2002.json  2003.json  2004.json  2005.json  2006.json  2007.json  2008.json  2009.json  2010.json  2011.json  2012.json  2013.json  2014.json  2015.json  2016.json  2017.json  2018.json  2019.json  2020.json  2021.json  2022.json  2023.json  female_2018.json  female_2019.json  (+4 more)
(+502 files in other folders)
