[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["Moritz Gottschling <gottschling.moritz@gmail.com>"]
readme = "README.md"
packages = [
    { include = "royal_rumble_crawler", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
joblib = "^1.3.2"
aiohttp = "^3.9.3"

[tool.poetry.scripts]
crawl = "royal_rumble_crawler.crawl:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
